# swing-trader

./: .env.example  .gitignore  CLAUDE.md  README.md  build.bat  build_exe.py  config.yaml  dashboard.py  gui.py  main.py  pyproject.toml  requirements.txt  selftest.py  swing_legacy.db-shm  swing_legacy.db-wal  swing_trade.db-shm  swing_trade.db-wal
.claude/: CLAUDE.md  PLUGINS-QUICK.md  PLUGINS.md  PROJECT.md  TEAM-DETAILED.md  TEAM-QUICK.md  TEAM.md
archive/: README.md  swing.db.20260414.bak
data/: column_mapper.py  krx_api.py  provider.py  stock_names.json
db/: init_db.py  run_migrations.py  schema.sql
docs/: ARCHITECTURE.md  BACKTEST_PROMPTS.md  BACKTEST_SPEC.md  CLAUDE.md  COMMANDS.md  CONDITION_SEARCH.md  EVENING_SCREENING.md  KIWOOM_SPEC.md  OPERATIONS.md  PRD.md  README.md  RISK_SPEC.md  STRATEGY_SPEC.md  STRATEGY_V3.md  SURGERY_GUIDE.md  SURGERY_PROMPTS_V2.md  TELEGRAM_SPEC.md
experiments/: analysis_tp1_eligibility.py  experiment_11_rs_benchmark.py  experiment_12_sizing.py  experiment_12b_hybrid.py  experiment_13_tp_structure.py  experiment_13b_baseline_tp2.py  experiment_14_10m_tuning.py  experiment_15_10m_filters.py  experiment_16_10m_tp_positions.py  experiment_17_tp_grid_final.py  experiment_17b_tp_minimal.py  experiment_17c_tp_extreme.py  experiment_ab_compare.py  experiment_ab_isolate.py  experiment_baseline_restore.py  experiment_date_cutoff.py  experiment_etf_mean_reversion.py  experiment_exit_reoptimize.py  experiment_filter_funnel.py  experiment_filter_relax.py  experiment_integrated_etf.py  experiment_new_strategies.py  results_ab_compare.txt  (+29 more)
(+309 files in other folders)
